Revert "[ADD] doc"
This reverts commit 83bd9cd4

--- a/docs/technical/latex/_window_8hpp_source.tex
+++ b/docs/technical/latex/_window_8hpp_source.tex
@@ -41,7 +41,7 @@
 \DoxyCodeLine{00037\ \ \ \ \ \textcolor{keywordtype}{void}\ unsubscribeDisplay();}
 \DoxyCodeLine{00038\ }
 \DoxyCodeLine{00039\ \ \ \ \ \textcolor{keywordtype}{void}\ launch();}
-\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keywordtype}{void}\ execute();}
+\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keywordtype}{void}\ update();}
 \DoxyCodeLine{00041\ }
 \DoxyCodeLine{00042\ \ \ \ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00043\ \ \ \ \ \textcolor{keywordtype}{void}\ handleEvent();}
