--- a/docs/technical/latex/class_client_1_1_client.tex
+++ b/docs/technical/latex/class_client_1_1_client.tex
@@ -96,7 +96,7 @@ This function contains the primary loop of the application, where events are pro
 \index{Client::Client@{Client::Client}!update@{update}}
 \index{update@{update}!Client::Client@{Client::Client}}
 \doxysubsubsection{\texorpdfstring{update()}{update()}}
-{\footnotesize\ttfamily void Client\+::\+Client\+::execute (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Client\+::\+Client\+::update (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx }\end{DoxyParamCaption})}
 
 
 
