--- a/docs/technical/latex/class_client_1_1_network.tex
+++ b/docs/technical/latex/class_client_1_1_network.tex
@@ -520,7 +520,7 @@ This function sets up the network to begin receiving data, setting up the necess
 \index{Client::Network@{Client::Network}!updateName@{updateName}}
 \index{updateName@{updateName}!Client::Network@{Client::Network}}
 \doxysubsubsection{\texorpdfstring{updateName()}{updateName()}}
-{\footnotesize\ttfamily void Client\+::\+Network\+::execute\+Name (\begin{DoxyParamCaption}\item[{std\+::string}]{name }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void Client\+::\+Network\+::update\+Name (\begin{DoxyParamCaption}\item[{std\+::string}]{name }\end{DoxyParamCaption})}
 
 
 
