--- a/docs/technical/latex/class_client_1_1_system_1_1_network_1_1_keyboard.tex
+++ b/docs/technical/latex/class_client_1_1_system_1_1_network_1_1_keyboard.tex
@@ -38,7 +38,7 @@ The \doxylink{class_client_1_1_system_1_1_network_1_1_keyboard}{Keyboard} class 
 \index{Client::System::Network::Keyboard@{Client::System::Network::Keyboard}!update@{update}}
 \index{update@{update}!Client::System::Network::Keyboard@{Client::System::Network::Keyboard}}
 \doxysubsubsection{\texorpdfstring{update()}{update()}}
-{\footnotesize\ttfamily void Client\+::\+System\+::\+Network\+::\+Keyboard\+::execute (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx,  }\item[{\mbox{\hyperlink{class_client_1_1_network}{\+::\+Client\+::\+Network}} \&}]{network }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
+{\footnotesize\ttfamily void Client\+::\+System\+::\+Network\+::\+Keyboard\+::update (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx,  }\item[{\mbox{\hyperlink{class_client_1_1_network}{\+::\+Client\+::\+Network}} \&}]{network }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}}
 
 
 
