--- a/docs/technical/latex/class_client_1_1_update_name_command_handler.tex
+++ b/docs/technical/latex/class_client_1_1_update_name_command_handler.tex
@@ -67,7 +67,7 @@ Construct a new \doxylink{class_client_1_1_update_name_command_handler}{Update\+
 
 
 
-Get the name associated with the execute name command.
+Get the name associated with the update name command. 
 
 \begin{DoxyReturn}{Returns}
 const std\+::string\& Reference to the name currently set for the update name command. 
