--- a/docs/technical/latex/class_event.tex
+++ b/docs/technical/latex/class_event.tex
@@ -30,7 +30,7 @@ Implements \mbox{\hyperlink{class_i_event}{IEvent}}.
 \index{Event@{Event}!updateEvent@{updateEvent}}
 \index{updateEvent@{updateEvent}!Event@{Event}}
 \doxysubsubsection{\texorpdfstring{updateEvent()}{updateEvent()}}
-{\footnotesize\ttfamily void Event\+::execute\+Event (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [virtual]}}
+{\footnotesize\ttfamily void Event\+::update\+Event (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [virtual]}}
 
 
 
