--- a/docs/technical/latex/class_game_engine_1_1_system_1_1_i_update_system.tex
+++ b/docs/technical/latex/class_game_engine_1_1_system_1_1_i_update_system.tex
@@ -10,7 +10,7 @@ Inheritance diagram for Game\+Engine\+::System\+::IUpdate\+System\+:\begin{figur
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{class_game_engine_1_1_system_1_1_i_update_system_a45cc87648b8fabab4f33740650fb08b1}\label{class_game_engine_1_1_system_1_1_i_update_system_a45cc87648b8fabab4f33740650fb08b1} 
-virtual void {\bfseries execute} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry, \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&ctx)=0
+virtual void {\bfseries update} (\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&registry, \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&ctx)=0
 \end{DoxyCompactItemize}
 
 
