--- a/docs/technical/latex/class_game_engine_1_1_system_1_1_renderer.tex
+++ b/docs/technical/latex/class_game_engine_1_1_system_1_1_renderer.tex
@@ -24,7 +24,7 @@ std\+::set$<$ Entity $>$ {\bfseries m\+\_\+entities} \{\}
 \index{GameEngine::System::Renderer@{GameEngine::System::Renderer}!update@{update}}
 \index{update@{update}!GameEngine::System::Renderer@{GameEngine::System::Renderer}}
 \doxysubsubsection{\texorpdfstring{update()}{update()}}
-{\footnotesize\ttfamily void Game\+Engine\+::\+System\+::\+Renderer\+::execute (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&}]{registry,  }\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [final]}, {\ttfamily [virtual]}}
+{\footnotesize\ttfamily void Game\+Engine\+::\+System\+::\+Renderer\+::update (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{Game\+Engine\+::\+ECS\+::\+Registry}} \&}]{registry,  }\item[{\mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{Game\+Engine\+::\+UI\+::\+Window\+Context}} \&}]{ctx }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [inline]}, {\ttfamily [final]}, {\ttfamily [virtual]}}
 
 
 
