--- a/docs/technical/latex/class_game_engine_1_1_u_i_1_1_window.tex
+++ b/docs/technical/latex/class_game_engine_1_1_u_i_1_1_window.tex
@@ -43,7 +43,7 @@ void {\bfseries unsubscribe\+Display} ()
 void {\bfseries launch} ()
 \item 
 \Hypertarget{class_game_engine_1_1_u_i_1_1_window_a69722e4c7c326769ee3fb414a36b8910}\label{class_game_engine_1_1_u_i_1_1_window_a69722e4c7c326769ee3fb414a36b8910} 
-void {\bfseries execute} ()
+void {\bfseries update} ()
 \end{DoxyCompactItemize}
 
 
