--- a/docs/technical/latex/class_i_event.tex
+++ b/docs/technical/latex/class_i_event.tex
@@ -10,7 +10,7 @@ Inheritance diagram for IEvent\+:\begin{figure}[H]
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{class_i_event_a203e66d0b6046240c9246dd842a97c38}\label{class_i_event_a203e66d0b6046240c9246dd842a97c38} 
-virtual void {\bfseries execute\+Event} ()=0
+virtual void {\bfseries update\+Event} ()=0
 \item 
 \Hypertarget{class_i_event_a890342c22a66adb516fde645d03dfea7}\label{class_i_event_a890342c22a66adb516fde645d03dfea7} 
 virtual void {\bfseries get\+Event} ()=0
