--- a/docs/technical/latex/class_sfml_event.tex
+++ b/docs/technical/latex/class_sfml_event.tex
@@ -10,7 +10,7 @@ Inheritance diagram for Sfml\+Event\+:\begin{figure}[H]
 \doxysubsection*{Public Member Functions inherited from \mbox{\hyperlink{class_event}{Event}}}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{class_event_abe276c1a345137c3f8e9bb2b7fad5d79}{execute\+Event}} ()
+void \mbox{\hyperlink{class_event_abe276c1a345137c3f8e9bb2b7fad5d79}{update\+Event}} ()
 \item 
 void \mbox{\hyperlink{class_event_a6771d6e56913e46538da3f4422d249b6}{get\+Event}} ()
 \end{DoxyCompactItemize}
