--- a/docs/technical/latex/_move_8hpp_source.tex
+++ b/docs/technical/latex/_move_8hpp_source.tex
@@ -21,7 +21,7 @@
 \DoxyCodeLine{00017\ }
 \DoxyCodeLine{00018\ \ \ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_game_engine_1_1_system_1_1_move}{Move}}\ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{GameEngine::ECS::System}}\ \{}
 \DoxyCodeLine{00019\ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry)}
+\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry)}
 \DoxyCodeLine{00021\ \ \ \ \ \{}
 \DoxyCodeLine{00022\ \ \ \ \ \ \ \textcolor{keyword}{auto}\&\ componentManager\ =\ registry.getComponentManager();}
 \DoxyCodeLine{00023\ }
