--- a/docs/technical/latex/system_2_renderer_8hpp_source.tex
+++ b/docs/technical/latex/system_2_renderer_8hpp_source.tex
@@ -21,7 +21,7 @@
 \DoxyCodeLine{00017\ \ \ \ \ :\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_system}{GameEngine::ECS::System}}}
 \DoxyCodeLine{00018\ \ \ \ \ ,\ \textcolor{keyword}{public}\ \mbox{\hyperlink{class_game_engine_1_1_system_1_1_i_update_system}{IUpdateSystem}}\ \{}
 \DoxyCodeLine{00019\ \ \ \ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ execute(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx)\ \textcolor{keyword}{final}}
+\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keywordtype}{void}\ update(\mbox{\hyperlink{class_game_engine_1_1_e_c_s_1_1_registry}{GameEngine::ECS::Registry}}\&\ registry,\ \mbox{\hyperlink{struct_game_engine_1_1_u_i_1_1_window_context}{GameEngine::UI::WindowContext}}\&\ ctx)\ \textcolor{keyword}{final}}
 \DoxyCodeLine{00021\ \ \ \ \ \{}
 \DoxyCodeLine{00022\ \ \ \ \ \ \ \textcolor{keyword}{auto}\&\ componentManager\ =\ registry.getComponentManager();}
 \DoxyCodeLine{00023\ }
